platform/librenms-config/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: librenms
  namespace: librenms
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: platform-gateway
      sectionName: https
  hostnames:
    - librenms.hacwa.co.uk
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: librenms
          port: 8000
          weight: 1
